fix: remove overlap in schema to reduce form complexity

--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -18,7 +18,7 @@
     @apply grid place-items-center;
   }
   .active {
-    @apply underline underline-offset-2 decoration-dark dark:decoration-light;
+    @apply underline underline-offset-8 decoration-dark dark:decoration-light;
   }
 }
 
